# CMOP_op

./: Dockerfile  README.md  exec_gfortran.dat.txt
code/: CMakeLists.txt  back_lagrange_continuo_new_time_loop.f90  calc_api.f90  coupling.f90  delft2oil.f90  dissolve_part.f90  dissolved_fase.f90  dissolved_fase_mod.f90  era5_2_oil.f90  evaporation.f90  hghghg.f90  lagrange_continuo_new_time_loop.f90  lagrange_continuo_new_time_loop_new_writing.f90  linear_interpolation.f90  module_ambiente.f90  oil_fractions.f90  oil_fractions_backup.f90  processes.f90  r8lib.f90  random_variables.f90  vertical_dispersion.f90  white_space.f90  wind_variables.f90
executavel/: cmop_exec
forcing_python/: adcirc_2_cmop_new_time.py  copernicus_geos_2_oil.py  era5_2_oil_newtime.py  gfs_2_oil_newtime.py  hycom_remo_2_oil_newtime.py  mercator_2_oil_newtime.py  mercator_hourly_2_oil_newtime.py  multi_spills_generator_coupling.py  roms_2_oil_newtime.py
